@@ -10,6 +10,7 @@ no if $] >= 5.018, warnings => "experimental::smartmatch";
 
 use utf8;
 
+use Encode qw(decode);
 use Travel::Routing::DE::VRR;
 use Exception::Class;
 use Getopt::Long qw/:config no_ignore_case/;
@@ -176,6 +177,12 @@ if ( not( @from and @to ) ) {
 for my $pair ( [ \@from, \$from_type ], [ \@via, \$via_type ],
 	[ \@to, \$to_type ], )
 {
+
+	if ( @{ $pair->[0] } ) {
+		$pair->[0]->[0] = decode( 'UTF-8', $pair->[0]->[0] );
+		$pair->[0]->[1] = decode( 'UTF-8', $pair->[0]->[1] );
+	}
+
 	next if ( not defined $pair->[0]->[1] );
 
 	if (
